increase font size for input to prevent auto-zoom on mobile

--- a/main.css
+++ b/main.css
@@ -16,3 +16,9 @@ body {
 .width {
    width: 100px !important;
 }
+
+input[type='text'],
+input[type='number'],
+textarea {
+  font-size: 16px;
+}
